Fix scrollbars

--- a/public/css/recensie-manager-public.css
+++ b/public/css/recensie-manager-public.css
@@ -117,7 +117,7 @@
   -o-transition: 0.3s;
   transition: 0.3s;
   max-height: 50vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .recmanWidget-content-name {
